2011-04-10 16:45-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.m: Correct drawing issue with horizontal portion of
	menu.
	
2011-03-20 German Arias <german@xelalug.org>

	* NSTabView+Gnome.m: No draw tabs if the style doesn't
	have these.

2011-03-16 11:05-EDT Ivan Vucica <ivucica@gmail.com>

	* GGnomeThemeInitialization.m: Better choice of some FS icons.
	* GNUmakefile: Initialize GNUSTEP_MAKEFILES if not initialized.
	Patch applied by: greg.casamento@gmail.com

2011-01-16 05:01-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.m
	* NSMenuView+Gnome.m: Change drawing to avoid issue with 
	lines being drawn after selection.  The solution is something
	of a hack.  This indicates that there might need to be methods
	altering the frame in the theme later on.

2011-01-16 03:20-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GnomeThemeInfo.plist: Added setting to use in-window menus.

2010-12-22 17:41-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GnomeThemeInfo.plist: Supress the app icon in this mode.

2010-11-27 Gregory Casamento <greg.casamento@gmail.com>

	* Changed all previously modified files to be
	a category on GGnomeTheme instead of GSTheme to 
	make certain they are loadable from the theme
	manager.
	
2010-11-27 Gregory Casamento <greg.casamento@gmail.com>

	* NSTableHeaderView+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>

	* NSTableHeaderCell+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>

	* NSSliderCell+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>

	* NSScrollView+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>

	* NSMenuView+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>

	* NSBrowser+Gnome.m: Use new theme methods.

2010-11-26 Gregory Casamento <greg.casamento@gmail.com>
