@@ -37,6 +37,7 @@
       default:
       case NSTopTabsBezelBorder: 
         aRect.size.height -= 16;
+	/*
         img = [painter paintBox: widget
                        withPart: "notebook"
                         andSize: aRect
@@ -46,11 +47,14 @@
                           style: widget->style];
 
         [painter drawAndReleaseImage: img inFrame: aRect flipped: YES];
+	*/
+	[self drawButton: aRect withClip: rect];
         break;
 
       case NSBottomTabsBezelBorder: 
         aRect.size.height -= 16;
         aRect.origin.y += 16;
+	/*
         img = [painter paintBox: widget
                        withPart: "notebook"
                         andSize: aRect
@@ -60,12 +64,15 @@
                           style: widget->style];
 
         [painter drawAndReleaseImage: img inFrame: aRect flipped: YES];
+	*/
         aRect.origin.y -= 16;
+	[self drawButton: aRect withClip: rect];
         break;
 
       case NSLeftTabsBezelBorder: 
         aRect.size.width -= 18;
         aRect.origin.x += 18;
+	/*
         img = [painter paintBox: widget
                        withPart: "notebook"
                         andSize: aRect
@@ -75,10 +82,13 @@
                           style: widget->style];
 
         [painter drawAndReleaseImage: img inFrame: aRect flipped: YES];
+	*/
+	[self drawButton: aRect withClip: rect];
         break;
 
       case NSRightTabsBezelBorder: 
         aRect.size.width -= 18;
+	/*
         img = [painter paintBox: widget
                        withPart: "notebook"
                         andSize: aRect
@@ -88,9 +98,12 @@
                           style: widget->style];
 
         [painter drawAndReleaseImage: img inFrame: aRect flipped: YES];
+	*/
+	[self drawButton: aRect withClip: rect];
         break;
 
       case NSNoTabsBezelBorder: 
+	/*
         img = [painter paintBox: widget
                        withPart: "notebook"
                         andSize: aRect
@@ -100,6 +113,8 @@
                           style: widget->style];
 
         [painter drawAndReleaseImage: img inFrame: aRect flipped: YES];
+	*/
+	[self drawButton: aRect withClip: rect];
         break;
 
       case NSNoTabsLineBorder: 
